# Caraslab_FP_preprocessing_pipeline

./: Caraslab_FP_analysis_pipeline.ipynb  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Caraslab_FP_analysis_pipeline-checkpoint.ipynb
Sample dataset/Key files/: SUBJ-ID-276_FP-Aversive-AM-220118-095506_spoutTimestamps.csv  SUBJ-ID-276_FP-Aversive-AM-220118-095506_trialInfo.csv  SUBJ-ID-278_FP-Aversive-AM-220211-104943_spoutTimestamps.csv  SUBJ-ID-278_FP-Aversive-AM-220211-104943_trialInfo.csv  SUBJ-ID-278_FP-Passive-Post-220211-110651_spoutTimestamps.csv  SUBJ-ID-278_FP-Passive-Post-220211-110651_trialInfo.csv  SUBJ-ID-279_FP-Aversive-AM-220201-160835_spoutTimestamps.csv  SUBJ-ID-279_FP-Aversive-AM-220201-160835_trialInfo.csv
helpers/: NumpyEncoder.py  caraslab_run_FP_pipeline.py  extract_FP_trial_zscores.py  plot_heatmapsByAnimal.py  plotting_and_measurements_helpers.py  preprocess_files.py  recalculate_ePsych_responseLatency.py  run_FP_pipeline.py  stopwatch.py  write_json.py
notebook_dist/helpers/: caraslab_run_FP_pipeline.py  extract_FP_trial_zscores.py  recalculate_ePsych_responseLatency.py
