[tool.poetry]
name = "caraslab-fp-analysis-pipeline"
version = "0.1.0"
description = ""
authors = ["biomath <math.biomatter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^1.0.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
